--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
   "name": "@appwise/eslint-config-vue",
-  "version": "1.2.0",
+  "version": "1.2.2",
   "description": "Eslint config for Vue.js projects",
   "main": "index.js",
   "author": "Wisemen",
   "license": "ISC",
   "dependencies": {
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
-    "@typescript-eslint/eslint-plugin": "6.7.4",
-    "@typescript-eslint/parser": "6.7.4",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
     "@vue/eslint-config-prettier": "8.0.0",
     "@vue/eslint-config-typescript": "12.0.0",
-    "eslint": "8.51.0",
+    "eslint": ">= 8",
     "eslint-plugin-check-file": "2.6.2",
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-require-explicit-generics": "0.4.2",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-unused-imports": "3.0.0",
-    "eslint-plugin-vue": "9.17.0",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.5"
+    "eslint-plugin-vue": "9.18.1",
+    "prettier-plugin-tailwindcss": "0.5.6",
+    "prettier": "3.0.3"
   },
   "devDependencies": {
-    "eslint": "8.50.0"
+    "eslint": "8.53.0"
   },
   "peerDependencies": {
     "eslint": ">= 8"
