--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "@appwise/eslint-config-vue",
-  "version": "1.2.3",
+  "name": "@wisemen/eslint-config-vue",
+  "version": "0.0.2",
   "description": "Eslint config for Vue.js projects",
-  "main": "index.js",
+  "main": "eslint.config.js",
   "author": "Wisemen",
+  "scripts": {
+    "pub:beta": "pnpm publish --no-git-checks --access public --tag beta",
+    "pub:next": "pnpm publish --no-git-checks --access public --tag next",
+    "pub:release": "pnpm publish --access public",
+    "eslint": "eslint . --fix"
+  },
+  "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@antfu/eslint-config": "^2.8.0",
+    "@eslint/eslintrc": "^3.0.2",
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
-    "@vue/eslint-config-prettier": "8.0.0",
-    "@vue/eslint-config-typescript": "12.0.0",
-    "eslint": ">= 8",
-    "eslint-plugin-check-file": "2.6.2",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "8.57",
+    "eslint-plugin-check-file": "2.7.1",
     "eslint-plugin-cypress": "2.15.1",
-    "eslint-plugin-require-explicit-generics": "0.4.2",
-    "eslint-plugin-simple-import-sort": "10.0.0",
-    "eslint-plugin-sort-keys-fix": "1.1.2",
-    "eslint-plugin-unused-imports": "3.0.0",
-    "eslint-plugin-vue": "9.18.1",
-    "prettier-plugin-tailwindcss": "0.5.6",
-    "prettier": "3.0.3"
+    "eslint-plugin-perfectionist": "^2.6.0",
+    "eslint-plugin-putout": "^22.4.1",
+    "eslint-plugin-require-explicit-generics": "1.0.0",
+    "eslint-plugin-tailwindcss": "^3.14.3"
   },
   "devDependencies": {
-    "eslint": "8.53.0"
+    "@types/eslint__eslintrc": "^2.1.1",
+    "eslint": "8.57"
   },
   "peerDependencies": {
-    "eslint": ">= 8"
+    "eslint": ">= 8.57"
   }
 }
