--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@eslint/eslintrc": "^3.0.2",
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
     "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "8.57",
+    "eslint": "^8.57",
     "eslint-plugin-check-file": "2.7.1",
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-perfectionist": "^2.6.0",
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@types/eslint__eslintrc": "^2.1.1",
-    "eslint": "8.57"
+    "eslint": "^8.57"
   },
   "peerDependencies": {
     "eslint": ">= 8.57"
