--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wisemen/eslint-config-vue",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Eslint config for Vue.js projects",
   "main": "eslint.config.js",
   "author": "Wisemen",
@@ -23,6 +23,7 @@
     "eslint-plugin-perfectionist": "^2.6.0",
     "eslint-plugin-putout": "^22.4.1",
     "eslint-plugin-require-explicit-generics": "1.0.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-tailwindcss": "^3.14.3"
   },
   "devDependencies": {
