--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,31 @@
 {
   "compilerOptions": {
-    "forceConsistentCasingInFileNames": true,
+    "target": "ESNext",
     "jsx": "preserve",
     "jsxImportSource": "vue",
-    "target": "ESNext",
+    "useDefineForClassFields": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "skipLibCheck": true,
-    "isolatedModules": true,
-    "useDefineForClassFields": true,
+    "resolveJsonModule": true,
+    "types": [],
+    "allowJs": true,
     "strict": true,
     "noImplicitThis": true,
-    "esModuleInterop": true,
-    "types": [],
-    "verbatimModuleSyntax": true,
-    "allowJs": true,
     "noEmit": true,
-    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+    "skipLibCheck": true
   },
   "include": [
-    "./**/*",
+    "./**/*"
   ],
   "exclude": [
-    
+
     "node_modules",
-    "dist",
+    "dist"
   ]
 
 }
