--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
@@ -27,7 +27,8 @@
     "eslint-plugin-putout": "^22.4.1",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-tailwindcss": "^3.14.3"
+    "eslint-plugin-tailwindcss": "^3.14.3",
+    "eslint-plugin-unused-imports": "^3.1.0"
   },
   "devDependencies": {
     "@types/eslint__eslintrc": "^2.1.1",
