--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
@@ -14,26 +14,26 @@
     "pack": "pnpm pack"
   },
   "peerDependencies": {
-    "eslint": "^9.3.0"
+    "eslint": "9.6.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^2.21.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.9",
-    "@typescript-eslint/parser": "^7.13.0",
-    "eslint": "^9.4.0",
+    "@antfu/eslint-config": "2.22.0",
+    "@eslint/eslintrc": "3.1.0",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0",
+    "@typescript-eslint/parser": "7.16.0",
+    "eslint": "9.6.0",
     "eslint-plugin-check-file": "2.8.0",
     "eslint-plugin-cypress": "3.3.0",
-    "eslint-plugin-path": "^1.3.0",
-    "eslint-plugin-perfectionist": "^2.11.0",
-    "eslint-plugin-putout": "^22.10.0",
+    "eslint-plugin-path": "1.3.0",
+    "eslint-plugin-perfectionist": "2.11.0",
+    "eslint-plugin-putout": "22.10.0",
     "eslint-plugin-require-explicit-generics": "1.0.0",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
-    "eslint-plugin-tailwindcss": "^3.17.3",
-    "eslint-plugin-unused-imports": "^4.0.0"
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "eslint-plugin-tailwindcss": "3.17.4",
+    "eslint-plugin-unused-imports": "4.0.0"
   },
   "devDependencies": {
-    "@types/eslint__eslintrc": "^2.1.1",
-    "eslint": "^9.4.0"
+    "@types/eslint__eslintrc": "2.1.1",
+    "eslint": "9.6.0"
   }
 }
