--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
@@ -17,23 +17,24 @@
     "eslint": "9.6.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "2.22.0",
+    "@antfu/eslint-config": "3.2.0",
     "@eslint/eslintrc": "3.1.0",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "eslint": "9.6.0",
+    "@typescript-eslint/parser": "8.4.0",
+    "@vitest/eslint-plugin": "^1.1.0",
+    "eslint": "9.9.1",
     "eslint-plugin-check-file": "2.8.0",
-    "eslint-plugin-cypress": "3.3.0",
+    "eslint-plugin-cypress": "3.5.0",
     "eslint-plugin-path": "1.3.0",
-    "eslint-plugin-perfectionist": "2.11.0",
-    "eslint-plugin-putout": "22.10.0",
+    "eslint-plugin-perfectionist": "3.4.0",
+    "eslint-plugin-putout": "23.1.0",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-tailwindcss": "3.17.4",
-    "eslint-plugin-unused-imports": "4.0.0"
+    "eslint-plugin-unused-imports": "4.1.3"
   },
   "devDependencies": {
-    "@types/eslint__eslintrc": "2.1.1",
-    "eslint": "9.6.0"
+    "@types/eslint__eslintrc": "2.1.2",
+    "eslint": "9.9.1"
   }
 }
