--- a/package.json
+++ b/package.json
@@ -11,30 +11,33 @@
     "pub:next": "pnpm publish --no-git-checks --access public --tag next",
     "pub:release": "pnpm publish --access public",
     "eslint": "eslint . --fix",
+    "lint": "eslint .",
+    "eslint-stats": "eslint . --stats -f json",
+    "test": "ts-node createFiles.ts",
     "pack": "pnpm pack"
   },
   "peerDependencies": {
     "eslint": "9.6.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "3.2.0",
+    "@antfu/eslint-config": "3.8.0",
     "@eslint/eslintrc": "3.1.0",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0",
-    "@typescript-eslint/parser": "8.4.0",
-    "@vitest/eslint-plugin": "^1.1.0",
-    "eslint": "9.9.1",
+    "@vitest/eslint-plugin": "^1.1.8",
+    "eslint": "9.14.0",
     "eslint-plugin-check-file": "2.8.0",
-    "eslint-plugin-cypress": "3.5.0",
     "eslint-plugin-path": "1.3.0",
-    "eslint-plugin-perfectionist": "3.4.0",
-    "eslint-plugin-putout": "23.1.0",
+    "eslint-plugin-perfectionist": "3.9.1",
+    "eslint-plugin-putout": "23.2.0",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
-    "eslint-plugin-tailwindcss": "3.17.4",
-    "eslint-plugin-unused-imports": "4.1.3"
+    "eslint-plugin-tailwindcss": "3.17.5",
+    "eslint-plugin-unused-imports": "4.1.4"
   },
   "devDependencies": {
     "@types/eslint__eslintrc": "2.1.2",
-    "eslint": "9.9.1"
+    "eslint": "9.14.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2"
   }
 }
