--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
   "version": "0.2.3",
+  "packageManager": "pnpm@9.9.0",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
