--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "packageManager": "pnpm@9.9.0",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
@@ -33,7 +33,8 @@
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-tailwindcss": "3.17.5",
-    "eslint-plugin-unused-imports": "4.1.4"
+    "eslint-plugin-unused-imports": "4.1.4",
+    "eslint-plugin-vuejs-accessibility": "2.4.1"
   },
   "devDependencies": {
     "@types/eslint__eslintrc": "2.1.2",
