--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "0.2.3",
-  "packageManager": "pnpm@9.9.0",
+  "version": "1.0.0-next.0",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
@@ -29,7 +28,7 @@
     "eslint-plugin-check-file": "2.8.0",
     "eslint-plugin-path": "1.3.0",
     "eslint-plugin-perfectionist": "3.9.1",
-    "eslint-plugin-putout": "23.2.0",
+    "eslint-plugin-putout": "23.3.0",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-tailwindcss": "3.17.5",
