--- a/package.json
+++ b/package.json
@@ -17,27 +17,28 @@
     "pack": "pnpm pack"
   },
   "peerDependencies": {
-    "eslint": "9.6.0"
+    "eslint": "9.21.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "3.8.0",
-    "@eslint/eslintrc": "3.1.0",
-    "@intlify/eslint-plugin-vue-i18n": "3.0.0",
-    "@vitest/eslint-plugin": "^1.1.8",
-    "eslint": "9.14.0",
-    "eslint-plugin-check-file": "2.8.0",
+    "@antfu/eslint-config": "4.5.0",
+    "@eslint/eslintrc": "3.3.0",
+    "@intlify/eslint-plugin-vue-i18n": "4.0.0",
+    "@vitest/eslint-plugin": "^1.1.36",
+    "eslint": "9.21.0",
+    "eslint-plugin-check-file": "3.1.0",
     "eslint-plugin-path": "1.3.0",
-    "eslint-plugin-perfectionist": "3.9.1",
-    "eslint-plugin-putout": "23.3.0",
+    "eslint-plugin-perfectionist": "4.9.0",
+    "eslint-plugin-putout": "25.0.3",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
-    "eslint-plugin-tailwindcss": "3.17.5",
+    "eslint-plugin-tailwindcss": "3.18.0",
     "eslint-plugin-unused-imports": "4.1.4"
   },
   "devDependencies": {
-    "@types/eslint__eslintrc": "2.1.2",
-    "eslint": "9.14.0",
+    "@types/eslint__eslintrc": "3.3.0",
+    "eslint": "9.21.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.3",
+    "vitest": "^3.0.7"
   }
 }
