--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "1.0.0-next.1",
+  "version": "1.0.0",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
@@ -21,24 +21,25 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "4.2.1",
-    "@eslint/eslintrc": "3.3.0",
+    "@eslint/eslintrc": "3.3.1",
     "@intlify/eslint-plugin-vue-i18n": "4.0.0",
-    "@vitest/eslint-plugin": "^1.1.36",
-    "eslint": "9.21.0",
+    "@vitest/eslint-plugin": "^1.1.38",
+    "eslint": "9.23.0",
     "eslint-plugin-check-file": "3.1.0",
     "eslint-plugin-path": "1.3.0",
-    "eslint-plugin-perfectionist": "4.9.0",
-    "eslint-plugin-putout": "25.0.3",
+    "eslint-plugin-perfectionist": "4.10.1",
+    "eslint-plugin-putout": "26.1.0",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-tailwindcss": "3.18.0",
-    "eslint-plugin-unused-imports": "4.1.4"
+    "eslint-plugin-unused-imports": "4.1.4",
+    "eslint-plugin-vuejs-accessibility": "^2.4.1"
   },
   "devDependencies": {
     "@types/eslint__eslintrc": "3.3.0",
-    "eslint": "9.21.0",
+    "eslint": "9.23.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
-    "vitest": "^3.0.8"
+    "vitest": "^3.0.9"
   }
 }
