--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pack": "pnpm pack"
   },
   "peerDependencies": {
-    "eslint": "9.21.0"
+    "eslint": "^9.23.0"
   },
   "dependencies": {
     "@antfu/eslint-config": "4.2.1",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@types/eslint__eslintrc": "3.3.0",
     "eslint": "9.23.0",
-    "ts-node": "^10.9.2",
+    "ts-node": "10.9.2",
     "tsx": "^4.19.3",
     "vitest": "^3.0.9"
   }
