--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.1.0-next.0",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
@@ -29,6 +29,7 @@
     "eslint-plugin-path": "1.3.0",
     "eslint-plugin-perfectionist": "4.10.1",
     "eslint-plugin-putout": "26.1.0",
+    "eslint-plugin-readable-tailwind": "^2.0.0",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-tailwindcss": "3.18.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/eslint__eslintrc": "3.3.0",
     "eslint": "9.23.0",
+    "tailwindcss": "^4.0.16",
     "ts-node": "10.9.2",
     "tsx": "^4.19.3",
     "vitest": "^3.0.9"
