--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "eslint-plugin-check-file": "3.1.0",
     "eslint-plugin-path": "1.3.0",
     "eslint-plugin-perfectionist": "4.10.1",
-    "eslint-plugin-putout": "26.1.0",
     "eslint-plugin-readable-tailwind": "^2.0.0",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
@@ -36,8 +35,8 @@
     "eslint-plugin-vuejs-accessibility": "^2.4.1"
   },
   "devDependencies": {
-    "@types/eslint__eslintrc": "3.3.0",
     "eslint": "9.23.0",
+    "eslint-typegen": "^2.1.0",
     "tailwindcss": "^4.0.16",
     "ts-node": "10.9.2",
     "tsx": "^4.19.3",
