--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.1",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
@@ -23,16 +23,20 @@
     "@antfu/eslint-config": "4.2.1",
     "@eslint/eslintrc": "3.3.1",
     "@intlify/eslint-plugin-vue-i18n": "4.0.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "@vitest/eslint-plugin": "^1.1.38",
     "eslint": "9.23.0",
     "eslint-plugin-check-file": "3.1.0",
+    "eslint-plugin-import-newlines": "^1.4.0",
+    "eslint-plugin-newline-destructuring": "^1.2.2",
     "eslint-plugin-path": "1.3.0",
     "eslint-plugin-perfectionist": "4.10.1",
     "eslint-plugin-readable-tailwind": "^2.0.0",
     "eslint-plugin-require-explicit-generics": "1.0.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unused-imports": "4.1.4",
-    "eslint-plugin-vuejs-accessibility": "^2.4.1"
+    "eslint-plugin-vuejs-accessibility": "^2.4.1",
+    "globals": "^16.0.0"
   },
   "devDependencies": {
     "eslint": "9.23.0",
