--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "1.2.0-beta.2",
+  "version": "1.2.0",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
