--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wisemen/eslint-config-vue",
   "type": "module",
-  "version": "1.2.0",
+  "version": "1.2.0-beta.3",
   "description": "Eslint config for Vue.js projects",
   "author": "Wisemen",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "@vitest/eslint-plugin": "^1.1.38",
     "eslint": "9.23.0",
     "eslint-plugin-check-file": "3.1.0",
+    "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-import-newlines": "^1.4.0",
     "eslint-plugin-newline-destructuring": "^1.2.2",
     "eslint-plugin-path": "1.3.0",
@@ -36,11 +37,10 @@
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unused-imports": "4.1.4",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
+    "eslint-typegen": "^2.1.0",
     "globals": "^16.0.0"
   },
   "devDependencies": {
-    "eslint": "9.23.0",
-    "eslint-typegen": "^2.1.0",
     "tailwindcss": "^4.0.16",
     "ts-node": "10.9.2",
     "tsx": "^4.19.3",
