feat(tailwind): added consistent-variable rule

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "moduleResolution": "Node",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
     "resolveJsonModule": true,
     "types": [],
     "allowJs": true,
