--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     },
     "resolveJsonModule": true,
     "types": [],
+    "allowImportingTsExtensions": true,
     "allowJs": true,
     "strict": true,
     "noImplicitThis": true,
