--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@test/*": [
+        "./test/*"
       ]
+
     },
     "resolveJsonModule": true,
     "types": [],
@@ -29,7 +33,6 @@
     "./**/*"
   ],
   "exclude": [
-
     "node_modules",
     "dist"
   ]
